Add cover to text page

--- a/_assets/sass/style.scss
+++ b/_assets/sass/style.scss
@@ -50,6 +50,7 @@
 		'components/header-compact',
 		'components/quote',
 		'components/cover',
+		'components/cover-letterbox',
 		'components/card',
 		'components/footer',
 		'components/caption',
