--- a/iCAN.Web/Views/Partials/Components/CoverLetterbox.cshtml
+++ b/iCAN.Web/Views/Partials/Components/CoverLetterbox.cshtml
@@ -7,21 +7,39 @@
     }
 
 	var hasLink = !String.IsNullOrWhiteSpace(Model.Url);
+
+	var smallImageUrl = Url.GetCropUrl(
+		Model.Image,
+		cropAlias: "21:9",
+		width: 800,
+		htmlEncode: false
+	).ToString();
+
+	var largeImageUrl = Url.GetCropUrl(
+		Model.Image,
+		cropAlias: "16:9",
+		width: 1800,
+		htmlEncode: false
+	).ToString();
+
+
 }
-<section class="c-cover @Model.ModifierClass">
+<section class="c-cover-letterbox @Model.ModifierClass" style="background-image: url(@largeImageUrl);">
+	@*
 	@RenderImage(Model.Image)
-	<div class="c-cover__inner o-wrap o-wrap--x-large">
-		<div class="c-cover__content">
+	*@
+	<div class="c-cover-letterbox__inner o-wrap o-wrap--x-large">
+		<div class="c-cover-letterbox__content">
 			@if (!String.IsNullOrWhiteSpace(Model.Headline)) {
-				<h1 class="c-cover__headline u-giga">@Model.Headline</h1>
+				<h1 class="c-cover-letterbox__headline u-giga">@Model.Headline</h1>
 			}
 			@if(!String.IsNullOrWhiteSpace(Model.Copy)) {
-				<div class="c-cover__copy u-epsilon">
+				<div class="c-cover-letterbox__copy u-epsilon">
 					@Html.Raw(Model.Copy)
 				</div>
 			}
 			@if (hasLink) {
-				<a href="@Model.Url" class="c-cover__cta c-button c-button--primary u-space-top" target="@Model.Target">@Model.CtaName</a>
+				<a href="@Model.Url" class="c-cover-letterbox__cta c-button c-button--primary u-space-top" target="@Model.Target">@Model.CtaName</a>
 			}
 		</div>
 	</div>
@@ -52,13 +70,13 @@
 
 	string xLargeImageUrl = Url.GetCropUrl(
 		image,
-		cropAlias: "16:9",
+		cropAlias: "21:9",
 		width: 1600,
 		htmlEncode: false
 	).ToString();
 
 	string xxLargeImageUrl = Url.GetCropUrl(image,
-		cropAlias: "16:9",
+		cropAlias: "21:9",
 		width: 1800,
 		htmlEncode: false
 	).ToString();
@@ -70,7 +88,7 @@
 		htmlEncode: false
 	).ToString();
 
-    <picture class="c-cover__image-wrap">
+    <picture class="c-cover-letterbox__image-wrap">
         <!--[if IE 9]><video style="display: none;"><![endif]-->
         <source srcset="@xxxLargeImageUrl" data-srcset="@xxxLargeImageUrl" media="(min-width: 1800px)">
         <source srcset="@xxLargeImageUrl" data-srcset="@xxLargeImageUrl" media="(min-width: 1500px)">
@@ -79,6 +97,6 @@
         <source srcset="@mediumImageUrl" data-srcset="@mediumImageUrl" media="(min-width: 600px)">
         <source srcset="@smallImageUrl" data-srcset="@smallImageUrl" media="(max-width: 599px)">
         <!--[if IE 9]></video><![endif]-->
-        <img src="@largeImageUrl&quality=18" data-src="@xLargeImageUrl" alt="@altText" class="c-cover__image js-lazyload" alt="@altText">
+        <img src="@largeImageUrl&quality=18" data-src="@xLargeImageUrl" alt="@altText" class="c-cover-letterbox__image js-lazyload" alt="@altText">
     </picture>
 }
