Overall qa fixes

--- a/_assets/sass/components/buttons.scss
+++ b/_assets/sass/components/buttons.scss
@@ -72,7 +72,7 @@
 
 .c-button--skiplink {
 	color: $white;
-	background-color: $sec;
+	background-color: $pri;
 	position: fixed;
 	left: 100%; // Moves button off screen
 	top: 1rem;
