--- a/iCAN.Web/Views/News.cshtml
+++ b/iCAN.Web/Views/News.cshtml
@@ -18,7 +18,7 @@
 }
 
 <div class="o-page__inner">
-	<div class="o-section o-page__content--has-sidebar o-wrap o-wrap--x-large">
+	<div class="o-page__content o-page__content--has-sidebar o-wrap o-wrap--x-large">
 		@Html.Partial("~/Views/Partials/Components/HeadingFeature.cshtml", new HeadingViewModel {
 			Headline = headline,
 			Subtitle = Model.GetPropertyValue<string>("subheadline"),
