--- a/iCAN.Web/Views/Partials/Components/CoverLetterbox.cshtml
+++ b/iCAN.Web/Views/Partials/Components/CoverLetterbox.cshtml
@@ -31,7 +31,17 @@
 	<div class="c-cover-letterbox__inner o-wrap o-wrap--x-large">
 		<div class="c-cover-letterbox__content">
 			@if (!String.IsNullOrWhiteSpace(Model.Headline)) {
-				<h1 class="c-cover-letterbox__headline u-giga">@Model.Headline</h1>
+				switch(Model.HeadingLevel) {
+					case "h1":
+						<h1 class="c-cover-letterbox__headline u-giga" itemprop="headline">@Model.Headline</h1>
+						break;
+					case "h3":
+						<h3 class="c-cover-letterbox__headline u-giga" itemprop="headline">@Model.Headline</h3>
+						break;
+					default:
+						<h2 class="c-cover-letterbox__headline u-giga" itemprop="headline">@Model.Headline</h2>
+						break;
+				}
 			}
 			@if(!String.IsNullOrWhiteSpace(Model.Copy)) {
 				<div class="c-cover-letterbox__copy u-epsilon">
