--- a/_assets/sass/base/forms.scss
+++ b/_assets/sass/base/forms.scss
@@ -35,6 +35,7 @@ textarea {
 textarea {
 	overflow: auto; // Hide scrollbar IE
 	resize: vertical;
+	display: block;
 
 	.is-disabled & {
 		resize: none;
