Update link list styles to work better without icons

--- a/iCAN.Web/Views/Partials/Components/LinkList.cshtml
+++ b/iCAN.Web/Views/Partials/Components/LinkList.cshtml
@@ -10,7 +10,9 @@
     @foreach( var item in Model.Links ) {
         var activeClass = item.IsActive ? "is-active" : "";
         <li class="c-link-list__item @activeClass">
-            <a href="@item.Url" class="c-link-list__link">@item.Name</a>
+            <a href="@item.Url" class="c-link-list__link">
+				<span class="c-link-list__name">@item.Name</span>
+			</a>
         </li>
     }
 </ul>
