--- a/_assets/sass/components/link-list.scss
+++ b/_assets/sass/components/link-list.scss
@@ -20,12 +20,18 @@
 	}
 }
 
+.c-link-list__icon {
+	margin-top: .5rem;
+	margin-bottom: .5rem;
+}
+
 .c-link-list__link {
 	display: block;
-	color: $heading-colour;
-	padding: 1.4rem;
+	color: $pri;
+	padding: .7rem 1.4rem;
 	font-size: 1.8rem;
-	transition: background-color $speed $ease;
+	transition: color $speed $ease,
+				background-color $speed $ease;
 
 	&:hover {
 		background-color: $light-1;
