--- a/_assets/sass/lib/selectric.scss
+++ b/_assets/sass/lib/selectric.scss
@@ -1,13 +1,11 @@
 /* ===========================================================
-
 	# Selectric
-
 =========================================================== */
 
 .selectric-wrapper {
 	position: relative;
 	cursor: pointer;
-	z-index: 2;
+	z-index: 9;
 }
 
 .selectric-responsive {
@@ -16,14 +14,16 @@
 
 .selectric {
 	width: 100%;
-	padding: 1.2rem 1.5rem;
+	border: $border-width solid $light-2;
+	padding: 1rem 2rem;
 	background: $white;
 	position: relative;
-	border: $border-width solid $border-colour;
-	padding: 1rem 1.5rem;
+	box-shadow: $box-shadow-3;
+	border-radius: $border-radius;
 	transition: border $speed $ease,
 				background $speed $ease,
-				border-color $speed $ease;
+				border-radius $speed $ease,
+				box-shadow $speed $ease;
 
 	.label {
 		color: $text-colour;
@@ -36,31 +36,29 @@
 	}
 
 	.button {
+		width: 4rem;
+		height: 100%;
 		display: block;
+		color: $sec;
 		position: absolute;
-		right: 0;
 		top: 0;
-		width: 42px;
-		height: 44px;
-		color: #BBB;
+		right: 0;
+		font-size: 1.3rem;
+		padding: 1.3rem 1.6rem;
 		text-align: center;
-		font: 0/0 a;
-		/* IE Fix */
-		*font: 20px/30px Lucida Sans Unicode, Arial Unicode MS, Arial;
+		transition: color $speed $ease,
+					background $speed $ease;
 
 		&:after {
-			content: " ";
+			width: 100%;
+			font-size: 2.4rem;
+			background-color: $pri;
 			position: absolute;
-			top: 0;
-			right: 0;
-			bottom: 0;
+			top: 50%;
 			left: 0;
-			margin: auto;
-			width: 0;
-			height: 0;
-			border: 7px solid transparent;
-			border-top-color: $pri;
-			border-bottom: none;
+			transform: translateY( -50% );
+			transition: color $speed $ease,
+						background $speed $ease;
 		}
 	}
 }
@@ -68,13 +66,19 @@
 .selectric-hover {
 
 	.selectric .button {
-		color: $grey-1;
+
 	}
 
 }
 
 .selectric-open {
 	z-index: 9999;
+
+	.selectric {
+		border-color: $sec;
+		box-shadow: $box-shadow-focus;
+		border-radius: $border-radius $border-radius 0 0;
+	}
 
 	.selectric-items {
 		visibility: visible;
@@ -84,10 +88,14 @@
 
 	&.selectric-above {
 
+		.selectric {
+			border-radius: 0 0 $border-radius $border-radius;
+		}
 
 		.selectric-items {
 		   top: auto;
 		   bottom: 100%;
+		   border-radius: $border-radius $border-radius 0 0;
 	   }
 
 	}
@@ -153,7 +161,8 @@
 	z-index: -1;
 	padding: 0;
 	overflow: hidden;
-	box-shadow: 0px 0px 10px 0px rgba(0,0,0,.1);
+	border-radius: 0 0 $border-radius $border-radius;
+	box-shadow: $box-shadow-focus;
 	transform: translateY(-1rem);
 	transition: opacity $speed $ease,
 				visibility $speed $ease,
@@ -187,6 +196,7 @@
 			background-color: $light-1;
 		}
 
+		&.highlighted,
 		&:hover {
 			background-color: $light-1;
 		}
@@ -235,6 +245,37 @@
 
 	.selectric-group li {
 		padding-left: 25px;
+	}
+
+}
+
+
+
+// show overflow scroll
+
+.selectric-scroll {
+
+	&::-webkit-scrollbar {
+		-webkit-appearance: none;
+	}
+
+	&::-webkit-scrollbar:vertical {
+		width: 11px;
+	}
+
+	&::-webkit-scrollbar:horizontal {
+		height: 11px;
+	}
+
+	&::-webkit-scrollbar-thumb {
+		border-radius: 8px;
+		border: 2px solid white; /* should match background, can't be transparent */
+		background-color: rgba(0, 0, 0, .5);
+	}
+
+	&::-webkit-scrollbar-track {
+		background-color: #fff;
+		border-radius: 8px;
 	}
 
 }
