--- a/iCAN.Web/assets/css/style.css
+++ b/iCAN.Web/assets/css/style.css
@@ -1477,6 +1477,212 @@ img {
 .slick-arrow.slick-hidden {
   display: none; }
 
+/* ===========================================================
+	# Selectric
+=========================================================== */
+.selectric-wrapper {
+  position: relative;
+  cursor: pointer;
+  z-index: 9; }
+
+.selectric-responsive {
+  width: 100%; }
+
+.selectric {
+  width: 100%;
+  border: 0.1rem solid #ede9e2;
+  padding: 1rem 2rem;
+  background: #FFFFFF;
+  position: relative;
+  box-shadow: 0 0 10px 2px rgba(0, 0, 0, 0.1);
+  border-radius: 0.3rem;
+  transition: border 0.3s ease-out, background 0.3s ease-out, border-radius 0.3s ease-out, box-shadow 0.3s ease-out; }
+  .selectric .label {
+    color: #000000;
+    display: block;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    margin: 0 30px 0 0;
+    min-height: 18px; }
+  .selectric .button {
+    width: 4rem;
+    height: 100%;
+    display: block;
+    color: #4f1c47;
+    position: absolute;
+    top: 0;
+    right: 0;
+    font-size: 1.3rem;
+    padding: 1.3rem 1.6rem;
+    text-align: center;
+    transition: color 0.3s ease-out, background 0.3s ease-out; }
+    .selectric .button:after {
+      width: 100%;
+      font-size: 2.4rem;
+      background-color: #ff9933;
+      position: absolute;
+      top: 50%;
+      left: 0;
+      -webkit-transform: translateY(-50%);
+          -ms-transform: translateY(-50%);
+              transform: translateY(-50%);
+      transition: color 0.3s ease-out, background 0.3s ease-out; }
+
+.selectric-open {
+  z-index: 9999; }
+  .selectric-open .selectric {
+    border-color: #4f1c47;
+    box-shadow: 0 0 10px 2px rgba(79, 28, 71, 0.3);
+    border-radius: 0.3rem 0.3rem 0 0; }
+  .selectric-open .selectric-items {
+    visibility: visible;
+    opacity: 1;
+    -webkit-transform: translateY(0) !important;
+        -ms-transform: translateY(0) !important;
+            transform: translateY(0) !important; }
+  .selectric-open.selectric-above .selectric {
+    border-radius: 0 0 0.3rem 0.3rem; }
+  .selectric-open.selectric-above .selectric-items {
+    top: auto;
+    bottom: 100%;
+    border-radius: 0.3rem 0.3rem 0 0; }
+
+.selectric-disabled {
+  filter: alpha(opacity=50);
+  opacity: 0.5;
+  cursor: default;
+  -webkit-touch-callout: none;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none; }
+
+.selectric-hide-select {
+  position: relative;
+  overflow: hidden;
+  width: 0;
+  height: 0; }
+  .selectric-hide-select select {
+    position: absolute;
+    left: -100%;
+    display: none; }
+
+.selectric-input {
+  position: absolute !important;
+  top: 0 !important;
+  left: 0 !important;
+  overflow: hidden !important;
+  clip: rect(0, 0, 0, 0) !important;
+  margin: 0 !important;
+  padding: 0 !important;
+  width: 1px !important;
+  height: 1px !important;
+  outline: none !important;
+  border: none !important;
+  *font: 0/0 a !important;
+  background: none !important; }
+
+.selectric-temp-show {
+  position: absolute !important;
+  visibility: hidden !important;
+  display: block !important; }
+
+/* Items box */
+.selectric-items {
+  opacity: 0;
+  visibility: hidden;
+  position: absolute;
+  top: 100%;
+  left: 0;
+  background: #FFFFFF;
+  border-top-width: 0;
+  z-index: -1;
+  padding: 0;
+  overflow: hidden;
+  border-radius: 0 0 0.3rem 0.3rem;
+  box-shadow: 0 0 10px 2px rgba(79, 28, 71, 0.3);
+  -webkit-transform: translateY(-1rem);
+      -ms-transform: translateY(-1rem);
+          transform: translateY(-1rem);
+  transition: opacity 0.3s ease-out, visibility 0.3s ease-out, -webkit-transform 0.3s ease-out;
+  transition: opacity 0.3s ease-out, visibility 0.3s ease-out, transform 0.3s ease-out;
+  transition: opacity 0.3s ease-out, visibility 0.3s ease-out, transform 0.3s ease-out, -webkit-transform 0.3s ease-out; }
+  .selectric-items .selectric-scroll {
+    height: 100%;
+    overflow: auto; }
+  .selectric-items ul,
+  .selectric-items li {
+    list-style: none;
+    padding: 0;
+    margin: 0;
+    line-height: 1.4;
+    min-height: 4rem; }
+  .selectric-items li {
+    display: block;
+    padding: 1rem 1.5rem;
+    color: #000000;
+    cursor: pointer;
+    transition: color 0.3s ease-out, background 0.3s ease-out; }
+    .selectric-items li.selected {
+      color: #ff9933;
+      font-weight: 700;
+      background-color: #f7f5f2; }
+    .selectric-items li.highlighted, .selectric-items li:hover {
+      background-color: #f7f5f2; }
+  .selectric-items .disabled {
+    filter: alpha(opacity=50);
+    opacity: 0.5;
+    cursor: default !important;
+    background: none !important;
+    color: #666 !important;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none; }
+
+.selectric-above .selectric-items {
+  -webkit-transform: translateY(1rem);
+      -ms-transform: translateY(1rem);
+          transform: translateY(1rem); }
+
+.selectric-items .selectric-group .selectric-group-label {
+  font-weight: bold;
+  padding-left: 10px;
+  cursor: default;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+  background: none;
+  color: #444; }
+
+.selectric-items .selectric-group.disabled li {
+  filter: alpha(opacity=100);
+  opacity: 1; }
+
+.selectric-items .selectric-group li {
+  padding-left: 25px; }
+
+.selectric-scroll::-webkit-scrollbar {
+  -webkit-appearance: none; }
+
+.selectric-scroll::-webkit-scrollbar:vertical {
+  width: 11px; }
+
+.selectric-scroll::-webkit-scrollbar:horizontal {
+  height: 11px; }
+
+.selectric-scroll::-webkit-scrollbar-thumb {
+  border-radius: 8px;
+  border: 2px solid white;
+  /* should match background, can't be transparent */
+  background-color: rgba(0, 0, 0, 0.5); }
+
+.selectric-scroll::-webkit-scrollbar-track {
+  background-color: #fff;
+  border-radius: 8px; }
+
 /* Magnific Popup CSS */
 .mfp-bg {
   top: 0;
@@ -3089,7 +3295,7 @@ img.mfp-img {
           transform: translateX(-1.4rem);
   margin: 0; }
   .c-link-list__item.is-active .c-link-list__link {
-    color: #ff9933; }
+    color: #4f1c47; }
 
 .c-link-list__icon {
   margin-top: .5rem;
