--- a/_assets/sass/objects/grid.scss
+++ b/_assets/sass/objects/grid.scss
@@ -15,6 +15,19 @@
 
 @include respond-min( $mq-small ) {
 
+	.flexwrap {
+
+		.o-grid--three {
+			display: flex;
+			flex-wrap: wrap;
+
+			.o-grid__item {
+				width: calc(31.3333333333% - 1px);
+			}
+		}
+
+	}
+
 	.o-grid--three {
 
 		.o-grid__item {
