set font weight on classless links

--- a/iCAN.Web/assets/css/ie.css
+++ b/iCAN.Web/assets/css/ie.css
@@ -472,6 +472,8 @@ a {
   transition: color 0.3s ease-out; }
   a:hover, a:focus {
     color: #4f1c47; }
+  a:not([class]) {
+    font-weight: 700; }
 
 /* ===========================================================
 
