--- a/_assets/sass/components/carousel.scss
+++ b/_assets/sass/components/carousel.scss
@@ -125,6 +125,40 @@
 		}
 	}
 
+	.c-carousel__nav--inline {
+		display: none;
+
+		.c-carousel--prev,
+		.c-carousel--next {
+			padding: 1.6rem 1.7rem 1.7rem 1.8rem;
+			position: relative;
+			left: inherit;
+			right: inherit;
+			background-color: $sec;
+			transform: none;
+
+			&:hover,
+			&:focus {
+				transform: none;
+			}
+		}
+
+		.c-carousel--prev {
+			.ico-arrow-left {
+				border-right-color: white;
+			}
+		}
+		.c-carousel--next {
+			margin-left: 1.5rem;
+			.ico-arrow-right {
+				border-left-color: white;
+			}
+		}
+
+
+	}
+
+
 }
 
 /* dots */
@@ -203,12 +237,6 @@
 
 	.slick-slide {
 		margin: 0 1.5rem;
-		opacity: 0.1;
-		transition: opacity 0.6s $ease;
-
-		&.slick-active {
-			opacity: 1;
-		}
 	}
 
 }
@@ -243,6 +271,17 @@
 				@include column(1/3, $cycle: 3);
 			}
 
+		}
+
+	}
+
+	.c-carousel--cards {
+
+		.c-carousel__nav--inline {
+			margin-top: -6.4em;
+			text-align: right;
+			margin-bottom: $line-height * 2;
+			display: block;
 		}
 
 	}
@@ -285,29 +324,6 @@
 			bottom: $line-height * 2;
 
 
-		}
-
-	}
-
-}
-
-
-@include respond-min( $mq-xx-large + 60px ) {
-
-	.c-carousel--cards {
-
-		.c-carousel--prev,
-		.c-carousel--next {
-			padding: 2.6rem 2.7rem;
-			box-shadow: 0 0 60px rgba(68, 68, 68, 0.5);
-		}
-
-		.c-carousel--prev {
-			left: -6rem;
-		}
-
-		.c-carousel--next {
-			right: -6rem;
 		}
 
 	}
