--- a/iCAN.Web/assets/css/ie.css
+++ b/iCAN.Web/assets/css/ie.css
@@ -3108,6 +3108,31 @@ img.mfp-img {
         -ms-transform: translate(5px, -50%);
             transform: translate(5px, -50%); }
 
+.enhance .c-carousel__nav--inline {
+  display: none; }
+  .enhance .c-carousel__nav--inline .c-carousel--prev,
+  .enhance .c-carousel__nav--inline .c-carousel--next {
+    padding: 1.6rem 1.7rem 1.7rem 1.8rem;
+    position: relative;
+    left: inherit;
+    right: inherit;
+    background-color: #4f1c47;
+    -webkit-transform: none;
+        -ms-transform: none;
+            transform: none; }
+    .enhance .c-carousel__nav--inline .c-carousel--prev:hover, .enhance .c-carousel__nav--inline .c-carousel--prev:focus,
+    .enhance .c-carousel__nav--inline .c-carousel--next:hover,
+    .enhance .c-carousel__nav--inline .c-carousel--next:focus {
+      -webkit-transform: none;
+          -ms-transform: none;
+              transform: none; }
+  .enhance .c-carousel__nav--inline .c-carousel--prev .ico-arrow-left {
+    border-right-color: white; }
+  .enhance .c-carousel__nav--inline .c-carousel--next {
+    margin-left: 1.5rem; }
+    .enhance .c-carousel__nav--inline .c-carousel--next .ico-arrow-right {
+      border-left-color: white; }
+
 /* dots */
 .c-carousel__dots {
   position: relative;
@@ -3155,11 +3180,7 @@ img.mfp-img {
   .c-carousel--cards .slick-list {
     overflow: visible; }
   .c-carousel--cards .slick-slide {
-    margin: 0 1.5rem;
-    opacity: 0.1;
-    transition: opacity 0.6s ease-out; }
-    .c-carousel--cards .slick-slide.slick-active {
-      opacity: 1; }
+    margin: 0 1.5rem; }
 
 .flexbox .c-carousel--cards .slick-track {
   display: -webkit-box;
@@ -3204,6 +3225,11 @@ img.mfp-img {
       float: right; }
     .no-enhance .c-carousel--cards .c-card:nth-child(3n + 1) {
       clear: both; }
+  .c-carousel--cards .c-carousel__nav--inline {
+    margin-top: -6.4em;
+    text-align: right;
+    margin-bottom: 3.4em;
+    display: block; }
   .c-carousel--contain .c-carousel__dots {
     position: absolute;
     bottom: 1.7em;
@@ -3223,16 +3249,6 @@ img.mfp-img {
     right: 6rem; }
   .c-carousel--contain .c-carousel__dots {
     bottom: 3.4em; } }
-
-@media only screen and (min-width: 1560px) {
-  .c-carousel--cards .c-carousel--prev,
-  .c-carousel--cards .c-carousel--next {
-    padding: 2.6rem 2.7rem;
-    box-shadow: 0 0 60px rgba(68, 68, 68, 0.5); }
-  .c-carousel--cards .c-carousel--prev {
-    left: -6rem; }
-  .c-carousel--cards .c-carousel--next {
-    right: -6rem; } }
 
 /* ===========================================================
 	# Heading
@@ -3458,6 +3474,31 @@ img.mfp-img {
         -ms-transform: translate(5px, -50%);
             transform: translate(5px, -50%); }
 
+.enhance .c-carousel__nav--inline {
+  display: none; }
+  .enhance .c-carousel__nav--inline .c-carousel--prev,
+  .enhance .c-carousel__nav--inline .c-carousel--next {
+    padding: 1.6rem 1.7rem 1.7rem 1.8rem;
+    position: relative;
+    left: inherit;
+    right: inherit;
+    background-color: #4f1c47;
+    -webkit-transform: none;
+        -ms-transform: none;
+            transform: none; }
+    .enhance .c-carousel__nav--inline .c-carousel--prev:hover, .enhance .c-carousel__nav--inline .c-carousel--prev:focus,
+    .enhance .c-carousel__nav--inline .c-carousel--next:hover,
+    .enhance .c-carousel__nav--inline .c-carousel--next:focus {
+      -webkit-transform: none;
+          -ms-transform: none;
+              transform: none; }
+  .enhance .c-carousel__nav--inline .c-carousel--prev .ico-arrow-left {
+    border-right-color: white; }
+  .enhance .c-carousel__nav--inline .c-carousel--next {
+    margin-left: 1.5rem; }
+    .enhance .c-carousel__nav--inline .c-carousel--next .ico-arrow-right {
+      border-left-color: white; }
+
 /* dots */
 .c-carousel__dots {
   position: relative;
@@ -3505,11 +3546,7 @@ img.mfp-img {
   .c-carousel--cards .slick-list {
     overflow: visible; }
   .c-carousel--cards .slick-slide {
-    margin: 0 1.5rem;
-    opacity: 0.1;
-    transition: opacity 0.6s ease-out; }
-    .c-carousel--cards .slick-slide.slick-active {
-      opacity: 1; }
+    margin: 0 1.5rem; }
 
 .flexbox .c-carousel--cards .slick-track {
   display: -webkit-box;
@@ -3554,6 +3591,11 @@ img.mfp-img {
       float: right; }
     .no-enhance .c-carousel--cards .c-card:nth-child(3n + 1) {
       clear: both; }
+  .c-carousel--cards .c-carousel__nav--inline {
+    margin-top: -6.4em;
+    text-align: right;
+    margin-bottom: 3.4em;
+    display: block; }
   .c-carousel--contain .c-carousel__dots {
     position: absolute;
     bottom: 1.7em;
@@ -3573,16 +3615,6 @@ img.mfp-img {
     right: 6rem; }
   .c-carousel--contain .c-carousel__dots {
     bottom: 3.4em; } }
-
-@media only screen and (min-width: 1560px) {
-  .c-carousel--cards .c-carousel--prev,
-  .c-carousel--cards .c-carousel--next {
-    padding: 2.6rem 2.7rem;
-    box-shadow: 0 0 60px rgba(68, 68, 68, 0.5); }
-  .c-carousel--cards .c-carousel--prev {
-    left: -6rem; }
-  .c-carousel--cards .c-carousel--next {
-    right: -6rem; } }
 
 /* ===========================================================
 
@@ -4385,6 +4417,22 @@ img.mfp-img {
 .u-icon--42 {
   width: 4.2rem;
   height: 4.2rem; }
+
+.u-icon--arrow-left {
+  width: 0;
+  height: 0;
+  display: block;
+  border-style: solid;
+  border-width: 3.5px 5px 3.5px 0;
+  border-color: transparent #222222 transparent transparent; }
+
+.u-icon--arrow-right {
+  width: 0;
+  height: 0;
+  display: block;
+  border-style: solid;
+  border-width: 3.5px 0 3.5px 5px;
+  border-color: transparent transparent transparent #222222; }
 
 /* ===========================================================
 
