--- a/_assets/sass/components/nav.scss
+++ b/_assets/sass/components/nav.scss
@@ -194,6 +194,7 @@
 			color: $white;
 			background-color: $sec;
 			position: absolute;
+			top: 3.6rem;
 			left: 0;
 			opacity: 0;
 			visibility: hidden;
