--- a/_assets/sass/components/cover-letterbox.scss
+++ b/_assets/sass/components/cover-letterbox.scss
@@ -5,9 +5,10 @@
 =========================================================== */
 
 .c-cover-letterbox {
+	width: 100%;
 	position: relative;
 	overflow: hidden;
-	background-color: $placeholder-colour;
+	background-color: $purple-1;
 	background-size: cover;
 	background-position: center center;
 
