--- a/_assets/sass/components/cover.scss
+++ b/_assets/sass/components/cover.scss
@@ -7,7 +7,7 @@
 .c-cover {
 	position: relative;
 	overflow: hidden;
-	background-color: $placeholder-colour;
+	background-color: $purple-1;
 
 	&::after {
 		content: "";
