--- a/_assets/sass/trumps/hero.scss
+++ b/_assets/sass/trumps/hero.scss
@@ -6,6 +6,13 @@
 
 	.t-has-hero {
 
+		.c-header {
+			width: 100%;
+			position: absolute;
+			top: 0;
+			left: 0;
+		}
+
 		body {
 			padding-top: 0 !important;
 		}
@@ -17,6 +24,10 @@
 
 				.c-nav__link {
 					color: $white;
+
+					&.is-active {
+						color: $pri;
+					}
 				}
 
 			}
