--- a/iCAN.Web/Views/Partials/Modules/Header.cshtml
+++ b/iCAN.Web/Views/Partials/Modules/Header.cshtml
@@ -9,7 +9,7 @@
 	<div class="u-hide--small u-hide--medium u-hide--large">
 		@Html.Partial("~/Views/Partials/Components/SuperNavigation.cshtml")
 	</div>
-	<div class="o-wrap o-wrap--x-large">
+	<div class="o-wrap o-wrap--x-large u-clearfix">
 		<a href="/" class="c-header__logo-link">
 			@Html.Partial("~/Views/Partials/Components/SiteLogo.cshtml")
 		</a>
