Add tweet to footer

--- a/_assets/sass/style.scss
+++ b/_assets/sass/style.scss
@@ -65,6 +65,7 @@
 		'components/breadcrumb',
 		'components/map',
 		'components/social',
+		'components/tweet',
 //		'components/tile',
 		'components/pagination',
 		'components/alert',
